@@ -18,8 +18,10 @@
 <p>
 Fix DTD bugs (dtd runs as root, error messages, writesf~)
 
-<p>
-Standard error: output it on Java standard error
+
+<P>
+MAC OS X: change the halaudioport in order to use a fifo between
+IOProc and FTS main thread.
 
 <p>
 ALSA
